<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_idioma"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/fondolan"
    tools:context="com.oop.dubanrosero.quickmindproject.Idioma">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/height"
        android:orientation="horizontal"
        android:layout_weight="1">
        <ImageView
            android:src="@drawable/idiom"
            android:layout_width="wrap_content"
            android:layout_gravity="center_vertical"
            android:id="@+id/idiom2"
            android:layout_height="@dimen/infoicon" />

        <TextView
            android:text="@string/Language"
            android:layout_width="@dimen/volicon"
            android:layout_height="wrap_content"
            android:id="@+id/languages1"
            android:layout_gravity="center_vertical"
            android:textSize="@dimen/titulo" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/height"
        android:layout_weight="1.5"
        android:layout_marginLeft="@dimen/margen">

        <TextView
            android:text="@string/Textlanguage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/textidioma"
            android:layout_weight="1"
            android:textSize="@dimen/letratam"
            android:layout_marginLeft="@dimen/margen"
            android:layout_marginRight="@dimen/margen"
            android:layout_marginBottom="@dimen/dist" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/height"
        android:elevation="@dimen/height"
        android:layout_weight="1"
        android:layout_marginLeft="@dimen/margen">

        <ImageView
            android:src="@drawable/spain_flags_flag_17068"
            android:layout_width="@dimen/idioicon"
            android:layout_height="@dimen/infoicon"
            android:layout_gravity="center_vertical"
            android:id="@+id/spanish" />

        <TextView
            android:text="@string/spanish"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/spanishtext"
            android:textSize="@dimen/letratam"
            android:gravity="center_vertical|center_horizontal" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/height"
        android:layout_weight="1"
        android:layout_marginLeft="@dimen/margen">

        <ImageView
            android:src="@drawable/united_kingdom_flags_flag_17079"
            android:layout_gravity="center_vertical"
            android:layout_width="@dimen/idioicon"
            android:id="@+id/english"
            android:layout_height="@dimen/infoicon" />

        <TextView
            android:text="@string/english"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/englishtext"
            android:textSize="@dimen/letratam"
            android:layout_gravity="center_vertical"
            android:gravity="center_vertical|center_horizontal" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/height"
        android:layout_weight="0.5">

        <ImageView
            android:src="@drawable/back"
            android:layout_height="match_parent"
            android:id="@+id/backlanguage"
            android:elevation="@dimen/height"
            android:layout_marginLeft="@dimen/atras"
            android:layout_width="match_parent" />
    </LinearLayout>


</LinearLayout>
