<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_tema"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/fon"
    tools:context="com.oop.dubanrosero.quickmindproject.tema">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.1"
            android:orientation="vertical">
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.8">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/titulo2"
                android:text="@string/chooseTheme"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:textColor="@android:color/darker_gray"
                android:textSize="@dimen/titulo"


                />
        </RelativeLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.1"
            android:orientation="vertical">
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.25"
        android:orientation="horizontal"



        >

        <ImageView
            android:src="@drawable/adn"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="match_parent"
            android:id="@+id/ciencia"
            />
        <ImageView
            android:src="@drawable/t"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="match_parent"
            android:id="@+id/sociles"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1"
        android:orientation="horizontal">


        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5">
            <TextView
                android:text="@string/science"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/Tciencia"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:textSize="@dimen/cuerpo"
                />

            ></RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5">

            <TextView
                android:text="@string/social"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/Tsociales"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:textSize="@dimen/cuerpo"
                />

            ></RelativeLayout>
        ></LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.25"
        android:orientation="horizontal">

        <ImageView
            android:src="@drawable/balon"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="match_parent"
            android:id="@+id/deporte"
            />
        <ImageView
            android:src="@drawable/art"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="match_parent"
            android:id="@+id/arte"
            />
        ></LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5">
            <TextView
                android:text="@string/sport"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/Tdeportes"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:textSize="@dimen/cuerpo"
                />

            ></RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5">

            <TextView
                android:text="@string/art"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/Tarte"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:textSize="@dimen/cuerpo"
                />

            ></RelativeLayout>



        ></LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.15"
        android:orientation="horizontal">

        <ImageView
            android:src="@drawable/atras"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/atras"
            android:layout_weight="0.2" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.6"
            android:orientation="horizontal">
        </LinearLayout>

        <ImageView
            android:src="@drawable/i"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/info"
            android:layout_weight="0.2" />



    </LinearLayout>

</LinearLayout>
