<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_configuracion"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/fon"
    tools:context="com.oop.dubanrosero.quickmindproject.Configuracion">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/height"
        android:layout_weight="0.5">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings"
            android:id="@+id/settingstext"
            android:textSize="@dimen/settings"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:layout_weight="0.8" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/height"
        android:layout_weight="0.8"
        android:layout_marginLeft="@dimen/margen">

        <ImageView
            android:src="@drawable/volume"
            android:id="@+id/volume"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_width="@dimen/volicon" />

        <SeekBar
            style="@android:style/Widget.SeekBar"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:max="10"
            android:progress="2"
            android:id="@+id/seekBar"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/height"
        android:layout_weight="1"
        android:layout_marginLeft="@dimen/margen">

        <ImageView
            android:src="@drawable/idiom"
            android:id="@+id/language"
            android:layout_weight="1"
            android:scaleY="0.8"
            android:layout_gravity="center_vertical"
            android:layout_height="match_parent"
            android:layout_width="@dimen/idioicon" />

        <Button
            android:layout_weight="7"
            android:text="@string/Language"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/botonlanguage"
            android:layout_gravity="center_vertical"
            android:textSize="@dimen/letratam"
            style="@android:style/Widget.DeviceDefault.Button"
            android:textColor="@android:color/black" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/height"
        android:layout_weight="1"
        android:layout_marginLeft="@dimen/margen">

        <ImageView
            android:src="@drawable/help"
            android:layout_height="wrap_content"
            android:id="@+id/help"
            android:layout_gravity="center_vertical"
            android:layout_width="@dimen/infoicon" />

        <Button
            android:text="@string/Aboutus"
            android:layout_height="wrap_content"
            android:id="@+id/botonaboutus"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:textSize="@dimen/letratam"
            style="@android:style/Widget.DeviceDefault.Button"
            android:layout_width="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="@dimen/height"
        android:orientation="horizontal"
        android:layout_weight="0.45"
        android:layout_marginLeft="@dimen/margen">

        <ImageView
            android:layout_gravity="right"
            android:src="@drawable/atras"
            android:id="@+id/back"
            android:layout_marginLeft="@dimen/atras"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="right"
            />
    </LinearLayout>

</LinearLayout>
